# semantic-book-recommender-codex-agent-benchmark

./: .env.example  .gitignore  CASE_STUDY.md  README.md  app.py  pyproject.toml  requirements.txt
artifacts/reports/: data_profile.json  sample_recommendations.csv
notebooks/: README.md  data-exploration.ipynb
scripts/: build_pipeline.py  recommend_cli.py
src/semantic_book_recommender/: __init__.py  app.py  cli.py  config.py  data.py  engine.py  pipeline.py  retrieval.py  taxonomy.py
src/semantic_book_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_pipeline.py  test_recommender.py
